--- a/app/src/views/settings/tagManager/tagManagerView.html
+++ b/app/src/views/settings/tagManager/tagManagerView.html
@@ -1,3 +1,12 @@
-<div>
-	<p>tag manager view</p>
+<div class="tag-manager-module general-module">
+	<div class="mod-header-wrapper">
+		<div class="mod-header">
+			<h4 translate="budget.SETTINGS.TAG_MANAGER.HEADER"></h4>
+		</div>
+	</div>
+	<div class="mod-body-wrapper">
+		<div class="mod-body">
+			<p>body</p>
+		</div>
+	</div>
 </div>
