start work on tag manager

--- a/app/src/static/sass/modules/_budget-ui-tooltip-login.scss
+++ b/app/src/static/sass/modules/_budget-ui-tooltip-login.scss
@@ -28,9 +28,12 @@
 .login-tooltip-module {
 	width: budget-calc(300, 16, em);
 
+	.mod-header-wrapper, .mod-footer-wrapper {
+		border: none;
+	}
+
 	.mod-header {
 		background: $blue;
-		border-radius: budget-calc(4, 16, em) budget-calc(4, 16, em) 0 0;
 		padding: budget-calc($padding-half, 16, em) budget-calc($padding-default, 16, em);
 
 		h5 {
