--- a/app/src/static/sass/ui.scss
+++ b/app/src/static/sass/ui.scss
@@ -36,6 +36,7 @@
 @import "modules/budget-ui-account-transactions-module";
 @import "modules/budget-ui-account-side-panel";
 @import "modules/budget-ui-transaction-tag-edit";
+@import "modules/budget-ui-tag-manager";
 
 
 /*****************************************************************************
