tag manager ui work

--- a/app/src/components/topNav/topNavView.html
+++ b/app/src/components/topNav/topNavView.html
@@ -1,5 +1,7 @@
 <header class="top-nav-module">
-    <div class="side-nav-toggle" ng-click="vm.toggleSideboard()" ng-class="{'active': vm.isToggleOpen}"><span class="icon-toggle"></span></div>
+    <div class="side-nav-toggle" ng-click="vm.toggleSideboard()" ng-class="{'active': vm.isToggleOpen}">
+		<span class="icon-toggle"></span>
+	</div>
     <div class="page-title"  ng-click="vm.navigate()">
         <span translate="budget.TOP_NAV.HEADER"></span>
     </div>
